Style Note markers. Also some accidental whitespace consistency fixes.

--- a/default.css
+++ b/default.css
@@ -42,7 +42,7 @@
 	}
 
 /** Section divider ***********************************************************/
-  /* <hr> used to separate TMI into the second half of a section              */
+	/* <hr> used to separate TMI into the second half of a section              */
 	hr:not([title]) {
 		font-size: 1.5em;
 		text-align: center;
@@ -54,7 +54,7 @@
 	hr:not([title])::before {
 		content: "\1F411\2003\2003\1F411\2003\2003\1F411";
 	}
-  /* note: <hr> with title separates document header from contents */
+	/* note: <hr> with title separates document header from contents */
 
 /******************************************************************************/
 /*                            Paragraphs and Lists                            */
@@ -339,7 +339,7 @@
 	}
 
 /** Self-Links ****************************************************************/
-  /* Auto-generated links from an element to its own anchor, for usability */
+	/* Auto-generated links from an element to its own anchor, for usability */
 
 	.heading, .issue, .note, .example, li, dt {
 		position: relative;
@@ -446,8 +446,8 @@
 	}
 
 	/* Displaying the output of text layout, particularly when
-	   line-breaking is being invoked, and thus having a
-	   visible width is good. */
+		 line-breaking is being invoked, and thus having a
+		 visible width is good. */
 	pre.output {
 		margin: 1em;
 		border: solid thin silver;
@@ -493,7 +493,7 @@
 	}
 
 /** Open issue ****************************************************************/
-  /* not intended for CR+ publication */
+	/* not intended for CR+ publication */
 
 	.issue {
 		border-color: #E05252;
@@ -545,9 +545,13 @@
 		background: #E9FBE9;
 		overflow: auto;
 	}
+	.note::before, .note > .marker {
+		display: block;
+		color: hsl(120, 70%, 30%);
+	}
 
 /** Advisement Box ************************************************************/
-  /*  for attention-grabbing normative statements */
+	/*  for attention-grabbing normative statements */
 
 	.advisement {
 		border-color: orange;
@@ -681,7 +685,7 @@
 	}
 
 /** Profile Tables ************************************************************/
-  /* table of required features in a CSS profile */
+	/* table of required features in a CSS profile */
 
 	table.features th {
 		background: #00589f;
@@ -696,16 +700,16 @@
 	}
 
 /** Data tables (and properly marked-up proptables) ***************************/
-  /*
-     <table class="data"> highlights structural relationships in a table
-     when correct markup is used (e.g. thead/tbody, th vs. td, scope attribute)
+	/*
+		 <table class="data"> highlights structural relationships in a table
+		 when correct markup is used (e.g. thead/tbody, th vs. td, scope attribute)
 
-     Use class="complex data" for particularly complicated tables --
-     (This will draw more lines: busier, but clearer.)
+		 Use class="complex data" for particularly complicated tables --
+		 (This will draw more lines: busier, but clearer.)
 
-     Use class="long" on table cells with paragraph-like contents
-     (This will adjust text alignment accordingly.)
-  */
+		 Use class="long" on table cells with paragraph-like contents
+		 (This will adjust text alignment accordingly.)
+	*/
 
 	.data, .proptable {
 		margin: 1em auto;
